--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.4.0
   http: ^0.13.5
   pedometer: ^3.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
