--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   pedometer: ^3.0.0
   provider: ^6.0.5
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
