--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/armors/static-armor/
+    - assets/armors/idle-armor/
+    - assets/armors/walking-armor/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
